syntax = "proto3";
package gobizz.events.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service Events {
  rpc CreateEvent(CreateEventRequest) returns (Event);
  rpc GetEvent(GetEventRequest) returns (Event);
  rpc ListEvents(ListEventsRequest) returns (ListEventsResponse);
  rpc UpdateEvent(UpdateEventRequest) returns (Event);
  rpc DeleteEvent(DeleteEventRequest) returns (DeleteEventResponse);
  rpc CutEventFrom(CutEventFromRequest) returns (Event);

  // Occurrences
  rpc ListOccurrences(ListOccurrencesRequest) returns (ListOccurrencesResponse);
}

// ====== Models ======
message Event {
  string id = 1;
  string customer_id = 2;
  string name = 3;
  string start_date = 4; // YYYY-MM-DD
  int32 interval_days = 5;
  optional string stop_at = 6;           // -> Option<String>
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

// ====== CRUD ======
message CreateEventRequest {
  string customer_id = 1;
  string name = 2;
  string start_date = 3;   // YYYY-MM-DD
  int32 interval_days = 4;
  optional string stop_at = 5;           // -> Option<String>
}

message GetEventRequest {
  string customer_id = 1;
  string id = 2;
}

message ListEventsRequest {
  string customer_id = 1;
  int64 limit = 2;
  int64 offset = 3;
}
message ListEventsResponse {
  repeated Event events = 1;
}

message UpdateEventRequest {
  string customer_id = 1;
  string id = 2;

  google.protobuf.StringValue name = 3;        // presence = patch
  google.protobuf.StringValue start_date = 4;  // YYYY-MM-DD
  google.protobuf.Int32Value interval_days = 5;

  // tri-state para stop_at (igual ao teu Option<Option<...>>):
  oneof stop_at_change {
    string stop_at = 6;      // define data
    bool clear_stop_at = 7;  // true => seta NULL
  }
}

message DeleteEventRequest {
  string customer_id = 1;
  string id = 2;
}
message DeleteEventResponse {
  bool deleted = 1;
}

message CutEventFromRequest {
  string customer_id = 1;
  string id = 2;
  string from = 3; // YYYY-MM-DD
}

// ====== Occurrences ======
message ListOccurrencesRequest {
  string customer_id = 1;
  string start = 2; // YYYY-MM-DD
  string end = 3;   // YYYY-MM-DD
  google.protobuf.StringValue name = 4; // filtro opcional
}

message Occurrence {
  string event_id = 1;
  string name = 2;
  string date = 3; // YYYY-MM-DD
}

message ListOccurrencesResponse {
  string start = 1;
  string end = 2;
  repeated Occurrence occurrences = 3;
}
